crates/vite_task_bin/tests/e2e_snapshots/fixtures/labeled-stdio/snapshots/multiple tasks, cache hit, replayed.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run --log=labeled -r check-tty-cached
[other#check-tty-cached] ~/packages/other$ vtt check-tty
[other#check-tty-cached] stdin:not-tty
[other#check-tty-cached] stdout:not-tty
[other#check-tty-cached] stderr:not-tty

[labeled-stdio-test#check-tty-cached] $ vtt check-tty
[labeled-stdio-test#check-tty-cached] stdin:not-tty
[labeled-stdio-test#check-tty-cached] stdout:not-tty
[labeled-stdio-test#check-tty-cached] stderr:not-tty

---
vt run: 0/2 cache hit (0%). (Run `vt run --last-details` for full details)
> vt run --log=labeled -r check-tty-cached
[other#check-tty-cached] ~/packages/other$ vtt check-tty ◉ cache hit, replaying
[other#check-tty-cached] stdin:not-tty
[other#check-tty-cached] stdout:not-tty
[other#check-tty-cached] stderr:not-tty

[labeled-stdio-test#check-tty-cached] $ vtt check-tty ◉ cache hit, replaying
[labeled-stdio-test#check-tty-cached] stdin:not-tty
[labeled-stdio-test#check-tty-cached] stdout:not-tty
[labeled-stdio-test#check-tty-cached] stderr:not-tty

---
vt run: 2/2 cache hit (100%), <duration> saved. (Run `vt run --last-details` for full details)
